# nova-grad

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: nova-github-actions.yml
examples/: amazon_reviews_pytorch.ipynb  basic_example.ipynb  mnist_digit_recognition.ipynb  mnist_digit_recognition_pytorch.ipynb
nova_grad/: __init__.py  engine.py  neural_network.py  nn.py
novagrad/: nn.py  tensor.py
tests/: engine_test.py  neural_network_test.py  nn_test.py  tensor_test.py
