[tool.poetry]
name = "nova-grad"
version = "0.1.0"
description = ""
authors = ["shaun-moate <shaun.moate@gmail.com>"]
readme = "README.md"
packages = [{include = "nova_grad"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
