[tool.poetry]
name = "novagrad"
version = "0.1.0"
description = ""
authors = ["shaun-moate <shaun.moate@gmail.com>"]
readme = "README.md"
packages = [{include = "novagrad"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
graphviz = "^0.20.1"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchtext = "^0.13.1"
torchdata = "^0.4.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
secondary = true
